miniflux-configs/metricsmw.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-blocked
  namespace: miniflux
spec:
  redirectRegex:
    regex: "/metrics"
    replacement: "/"
    permanent: true
