miniflux-configs/miniflux-pg.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: miniflux
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - storage
      containers:
      - name: db
        image: postgres:11
        imagePullPolicy: "Always"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
      annotations:
        backup.kubernetes.io/deltas: P1D P7D
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
