miniflux-configs/miniflux.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: miniflux
  name: miniflux
  labels:
    app: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - image: miniflux/miniflux
          name: miniflux
