miniflux-configs/miniflux-pg-service.yml
kind: Service
apiVersion: v1
metadata:
  name: db
  namespace: miniflux
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
  clusterIP: None
