miniflux-configs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: miniflux
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "miniflux-redirect-blocked@kubernetescrd"
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: miniflux.zrui.dev
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 8080
  tls:
    - secretName: miniflux-tls-secret
      hosts:
        - miniflux.zrui.dev
